--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,27 @@
-version: '3.7'
+version: "3.7"
 
 services:
-
-  node:
+  web:
     container_name: nodeapp
-    image: nodeapp
+    image: vimalesh198/nodedockerapp:2.0
     build:
       context: .
       dockerfile: node.dockerfile
-      args:
-        PACKAGES: "nano wget curl"
     ports:
-      - "3000:3000"
+      - 3000:3000
     networks:
-      - nodeapp-network
+      - node-app-networks
     volumes:
       - ./logs:/var/www/logs
-    environment:
-      - NODE_ENV=production
-      - APP_VERSION=1.0
-    depends_on: 
-      - mongodb
-      
-  mongodb:
-    container_name: mongodb
+    depends_on:
+      - db
+
+  db:
+    container_name: "mongodb"
     image: mongo
     networks:
-      - nodeapp-network
+      - node-app-networks
 
 networks:
-  nodeapp-network:
+  node-app-networks:
     driver: bridge
